# OiAK-project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
FloatingPoint/: CMakeLists.txt
FloatingPoint/source/: Utils.cpp  library.cpp
FloatingPoint/source/headers/: Utils.h
output/: OIAK_PROJECT
src/: CMakeLists.txt  Utils.cpp  library.cpp
src/include/: library.h
test/: CMakeLists.txt
test/UT/: CMakeLists.txt  FloatingPointAdderTest.cpp  FloatingPointCompatibilityTest.cpp  FloatingPointConstructorTest.cpp  FloatingPointMultiplierTest.cpp  FloatingPointPerformanceTest.cpp  UnitTests.cpp
