CMAKE_MINIMUM_REQUIRED( VERSION 3.13 )
INCLUDE( ExternalProject )
PROJECT( OiAKProjekt )

SET( CMAKE_CXX_STANDARD 17 )

ADD_SUBDIRECTORY( src )
INCLUDE_DIRECTORIES( src/include )

ADD_EXECUTABLE( OIAK_PROJECT
                main.cpp
                )
TARGET_LINK_LIBRARIES( OIAK_PROJECT FLOATING_POINT )
ADD_DEFINITIONS( "-g -Wall -m64 -O3" )

ENABLE_TESTING()
ADD_SUBDIRECTORY( test )
